[package]
name = "recall-claude"
version = "2.0.0"
edition = "2021"
description = "Persistent three-layer memory system for Claude Code"
license = "AGPL-3.0-only"
repository = "https://github.com/dnacenta/recall-claude"
keywords = ["claude", "claude-code", "ai", "memory", "llm"]
categories = ["command-line-utilities"]
authors = ["dnacenta"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
